--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* --- TEMPLATE V5.1 STYLES (Final Check & Polish) --- */
+/* --- TEMPLATE V5.2 STYLES (Restoration from build failure) --- */
 
 :root {
     --bg-color: #0a0a12;
